# code-sentinel

./: .dockerignore  .gitignore  CONTEXT.md  Dockerfile  README.md  package.json
apps/cli-tool/: .codesentinel-mcp.json  .env.example  README.md  pyproject.toml
apps/cli-tool/src/codesentinel/: cli.py  config.py  openharness.py  presenter.py  remediation.py  report.py  semgrep.py  trufflehog.py
apps/cli-tool/tools/: browser_use_tool.py  dummy_tool.sh  exa_search_tool.py  js_analyzer_tool.py
apps/proxy-backend/: .dockerignore  .env.example  Dockerfile  package.json
apps/proxy-backend/src/: config.ts  index.ts  key-pool.ts  server.ts
apps/proxy-backend/tests/: key-pool.test.ts  server.test.ts
docs/: ai-handoff.md  docker-guide.md  handoff.md
docs/adr/: 0001-python-cli-and-openai-compatible-proxy.md  001-phase-1-architecture.md
